testsuite/tests/typecheck/should_fail/tcfail018.alan
main () : proc
   a : int [10];
   b : int [10];
{
   writeInteger(a+b);
   writeString("\nThis program is wrong!\n");
}
